docs: improve transaction api doc
